calculate `dL / dN` for generalized Hill curves

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -156,12 +156,16 @@
     "\\frac{\\partial L}{\\partial a_{\\rm{wt},e}} =\n",
     "-\\sum_{v,c}\n",
     "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
-    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial L}{\\partial n_e} =\n",
-    "?\n",
+    "\\frac{\\partial L}{\\partial n_e}\n",
+    "=\n",
+    "\\sum_{v,c}\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "p_v\\left(c\\right) \\frac{\\left(\\phi_e\\left(v\\right) - \\ln c\\right)}{\\left(1 - t_e\\right)}\n",
+    "\\frac{\\left[1 - U_e\\left(v, c\\right)\\right]\\left[U_e\\left(v, c\\right) - t_e\\right]}{U_e\\left(v, c\\right)}.\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -233,6 +237,21 @@
     "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}\n",
     "=\n",
     "-p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc6cfe1f-6f02-4977-9aef-d5bc6576277b",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}$\n",
+    "\n",
+    "The only difference from above is the sign, so:\n",
+    "$$\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}\n",
+    "=\n",
+    "\\frac{\\left(\\phi_e\\left(v\\right) - \\ln c\\right)}{\\left(1 - t_e\\right)} \\left[1 - U_e\\left(v, c\\right)\\right]\\left[U_e\\left(v, c\\right) - t_e\\right].\n",
     "$$"
    ]
   },
