calculate `dL / dt` for generalized Hill curves

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -170,7 +170,9 @@
     "\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial t_e} =\n",
-    "?\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "\\left(\\frac{p_v\\left(c\\right)}{U_e\\left(v, c\\right)}\\right)\n",
+    "\\frac{1 - U_e\\left(v, c\\right)}{1 - t_e}\n",
     "$$\n",
     "\n",
     "See below for how the sub-components that lead to these were calculated."
@@ -247,11 +249,24 @@
    "source": [
     "#### Calculating $\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}$\n",
     "\n",
-    "The only difference from above is the sign, so:\n",
     "$$\n",
     "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}\n",
     "=\n",
     "\\frac{\\left(\\phi_e\\left(v\\right) - \\ln c\\right)}{\\left(1 - t_e\\right)} \\left[1 - U_e\\left(v, c\\right)\\right]\\left[U_e\\left(v, c\\right) - t_e\\right].\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64ef479-cfd6-40d4-99bd-785d5f420665",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial U_e\\left(v, c\\right)}{\\partial t_e}$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial t_e}\n",
+    "=\n",
+    "\\frac{1 - U_e\\left(v, c\\right)}{1 - t_e}.\n",
     "$$"
    ]
   },
