--- a/tests/analytical_derivatives.ipynb
+++ b/tests/analytical_derivatives.ipynb
@@ -25,11 +25,11 @@
    "id": "55204dbf-c3e2-4339-93e4-fc11d78b8863",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:12:56.514413Z",
-     "iopub.status.busy": "2023-02-13T21:12:56.513993Z",
-     "iopub.status.idle": "2023-02-13T21:12:57.147196Z",
-     "shell.execute_reply": "2023-02-13T21:12:57.146397Z",
-     "shell.execute_reply.started": "2023-02-13T21:12:56.514388Z"
+     "iopub.execute_input": "2023-02-13T21:41:47.073087Z",
+     "iopub.status.busy": "2023-02-13T21:41:47.072593Z",
+     "iopub.status.idle": "2023-02-13T21:41:51.374754Z",
+     "shell.execute_reply": "2023-02-13T21:41:51.373931Z",
+     "shell.execute_reply.started": "2023-02-13T21:41:47.073063Z"
     },
     "tags": []
    },
@@ -81,11 +81,11 @@
    "id": "17e4fff9-2af7-454c-ad00-a2ac969d863f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:12:57.151325Z",
-     "iopub.status.busy": "2023-02-13T21:12:57.151016Z",
-     "iopub.status.idle": "2023-02-13T21:12:57.174831Z",
-     "shell.execute_reply": "2023-02-13T21:12:57.174175Z",
-     "shell.execute_reply.started": "2023-02-13T21:12:57.151305Z"
+     "iopub.execute_input": "2023-02-13T21:41:51.378377Z",
+     "iopub.status.busy": "2023-02-13T21:41:51.378103Z",
+     "iopub.status.idle": "2023-02-13T21:41:51.395497Z",
+     "shell.execute_reply": "2023-02-13T21:41:51.394808Z",
+     "shell.execute_reply.started": "2023-02-13T21:41:51.378355Z"
     },
     "tags": []
    },
@@ -115,9 +115,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53dc3cff-189a-490d-bb21-d4382ca465f5",
+   "metadata": {},
+   "source": [
+    "Now test that:\n",
+    "$$\n",
+    "\\frac{\\partial U}{\\partial t}\n",
+    "=\n",
+    "\\frac{1 - U}{1 - t}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "39c708d4-6625-43d3-b40c-0d1329affbab",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-13T21:41:51.398337Z",
+     "iopub.status.busy": "2023-02-13T21:41:51.398157Z",
+     "iopub.status.idle": "2023-02-13T21:41:51.422410Z",
+     "shell.execute_reply": "2023-02-13T21:41:51.420950Z",
+     "shell.execute_reply.started": "2023-02-13T21:41:51.398319Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def U(t, phi, n, c):\n",
+    "    return (1 - t) / (1 + (c * numpy.exp(-phi))**n) + t\n",
+    "\n",
+    "def dU_dt(t, phi, n, c):\n",
+    "    u = U(t, phi, n, c)\n",
+    "    return (1 - u) / (1 - t)\n",
+    "\n",
+    "for phi in [-1, 0, 1]:\n",
+    "    for c in [0.5, 1, 2]:\n",
+    "        for t in [0, 0.01, 0.1]:\n",
+    "            for n in [0.5, 1, 2]:\n",
+    "                err = scipy.optimize.check_grad(\n",
+    "                    U,\n",
+    "                    dU_dt,\n",
+    "                    numpy.array([t]),\n",
+    "                    phi,\n",
+    "                    n,\n",
+    "                    c,\n",
+    "                )\n",
+    "                if err > 5e-8:\n",
+    "                    raise ValueError(f\"{err=}, {phi=}, {c=}, {t=}, {n=}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff8c116-6b83-4672-9bfe-d70e62936b85",
+   "id": "63e1409a-4fcd-464d-aa17-e7c84c34d2b9",
    "metadata": {},
    "outputs": [],
    "source": []
