remove bootstrapping from docs/tests

--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Bootstrapping model fits\n",
+    "\n",
+    "**Bootstrapping does not really seem superior to simply looking at the *times_seen* parameter for mutations. Model average is the way to go. So this notebook is no longer tested or included in docs and may be obsolete.**\n",
+    "\n",
     "The previous section describes fitting a single model.\n",
     "But we may also want to have confidence estimates for the fit.\n",
     "We can do that via bootstrapping the data set.\n",
