make `biophysical_model.ipynb` pass tests

--- a/notebooks/biophysical_model.ipynb
+++ b/notebooks/biophysical_model.ipynb
@@ -131,6 +131,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "import altair as alt\n",
     "\n",
     "import numpy\n",
