--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:12.371881Z",
-     "iopub.status.busy": "2022-11-12T21:44:12.371366Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.547246Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.546478Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:12.371749Z"
+     "iopub.execute_input": "2023-02-16T22:18:52.339379Z",
+     "iopub.status.busy": "2023-02-16T22:18:52.338910Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.495616Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.494911Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:52.339353Z"
     },
     "tags": []
    },
@@ -118,6 +118,34 @@
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
     ")\n",
     "\n",
+    "models[\"non-one Hill coefficient, not fit\"] = Polyclonal(\n",
+    "    data_to_fit=data_to_fit,\n",
+    "    activity_wt_df=activity_wt_df,\n",
+    "    hill_coefficient_df=pd.DataFrame(\n",
+    "        {\"epitope\": [\"e1\", \"e2\"], \"hill_coefficient\": [1.5, 0.9]}\n",
+    "    ),\n",
+    "    spatial_distances=spatial_distances,\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")\n",
+    "\n",
+    "models[\"non-zero non-neutralized frac, not fit\"] = Polyclonal(\n",
+    "    data_to_fit=data_to_fit,\n",
+    "    activity_wt_df=activity_wt_df,\n",
+    "    non_neutralized_frac_df=pd.DataFrame(\n",
+    "        {\"epitope\": [\"e1\", \"e2\"], \"non_neutralized_frac\": [0.01, 0.1]}\n",
+    "    ),\n",
+    "    spatial_distances=spatial_distances,\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")\n",
+    "\n",
     "# fit models\n",
     "for name, model in list(models.items()):\n",
     "    fit_name = name.replace(\"not fit\", \"fit\")\n",
@@ -139,11 +167,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.548905Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.548603Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.590424Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.589725Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.548881Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.499168Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.498923Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.544684Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.543989Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.499148Z"
     },
     "tags": []
    },
@@ -159,10 +187,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -218,11 +258,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.591396Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.591240Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.696843Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.696130Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.591376Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.547537Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.547356Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.767762Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.767092Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.547518Z"
     },
     "tags": []
    },
@@ -238,10 +278,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -266,7 +318,7 @@
     "        analytical_grad = dloss[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
     "        mag = numpy.sqrt(analytical_grad**2)\n",
-    "        if (diff > 1e-7) or (diff / mag > 1e-3):\n",
+    "        if (diff > 5e-7) or (diff / mag > 1e-3):\n",
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
     "            )\n",
@@ -288,11 +340,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.697976Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.697823Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.706453Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.705839Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.697957Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.773198Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.772908Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.785323Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.784816Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.773174Z"
     },
     "tags": []
    },
@@ -308,10 +360,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -360,11 +424,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.708064Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.707823Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.722813Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.722148Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.708042Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.788154Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.787886Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.812598Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.811973Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.788137Z"
     },
     "tags": []
    },
@@ -380,10 +444,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -435,11 +511,11 @@
    "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.723930Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.723688Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.739220Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.738560Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.723907Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.815346Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.815130Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.835615Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.834977Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.815329Z"
     },
     "tags": []
    },
@@ -455,10 +531,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -482,12 +570,15 @@
     "        s_eps, _ = model._site_avg_abs_diff(model._params + eps_vec, epsilon)\n",
     "\n",
     "        # figure out what beta value is being changed\n",
-    "        a_eps, beta_eps = model._a_beta_from_params(eps_vec)\n",
-    "        if (a_eps == eps).sum() == 1 and (beta_eps == eps).sum() == 0:\n",
-    "            # changing an activity should have no effect on s\n",
+    "        a_eps, n_eps, t_eps, beta_eps = model._a_n_t_beta_from_params(eps_vec)\n",
+    "        if (\n",
+    "            ((a_eps == eps).sum() + (n_eps == eps).sum() + (t_eps == eps).sum() == 1)\n",
+    "            and (beta_eps == eps).sum() == 0\n",
+    "        ):\n",
+    "            # changing non-beta param should have no effect on s\n",
     "            assert (s == s_eps).all()\n",
     "            continue\n",
-    "        assert (a_eps == eps).sum() == 0\n",
+    "        assert (a_eps == eps).sum() == (n_eps == eps).sum() == (t_eps == eps).sum() == 0\n",
     "        assert (beta_eps == eps).sum() == 1\n",
     "        i_mutation, i_epitope = numpy.where(beta_eps == eps)\n",
     "        i_mutation = i_mutation[0]\n",
@@ -530,11 +621,11 @@
    "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.740167Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.740022Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.755824Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.755145Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.740149Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.838299Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.838156Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.860682Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.860151Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.838284Z"
     },
     "tags": []
    },
@@ -550,10 +641,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -613,11 +716,11 @@
    "id": "2a16f2d5-9529-4796-abac-4412eae7136c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:44:18.756831Z",
-     "iopub.status.busy": "2022-11-12T21:44:18.756663Z",
-     "iopub.status.idle": "2022-11-12T21:44:18.769286Z",
-     "shell.execute_reply": "2022-11-12T21:44:18.768634Z",
-     "shell.execute_reply.started": "2022-11-12T21:44:18.756811Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.863175Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.862959Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.879985Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.879342Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.863155Z"
     },
     "tags": []
    },
@@ -633,10 +736,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -688,15 +803,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T21:46:17.441305Z",
-     "iopub.status.busy": "2022-11-12T21:46:17.440796Z",
-     "iopub.status.idle": "2022-11-12T21:46:17.460619Z",
-     "shell.execute_reply": "2022-11-12T21:46:17.459748Z",
-     "shell.execute_reply.started": "2022-11-12T21:46:17.441265Z"
+     "iopub.execute_input": "2023-02-16T22:18:55.882449Z",
+     "iopub.status.busy": "2023-02-16T22:18:55.882244Z",
+     "iopub.status.idle": "2023-02-16T22:18:55.897996Z",
+     "shell.execute_reply": "2023-02-16T22:18:55.897370Z",
+     "shell.execute_reply.started": "2023-02-16T22:18:55.882430Z"
     },
     "tags": []
    },
@@ -712,10 +827,22 @@
       "Model: different variants among concentrations, not fit\n",
       "All gradients check\n",
       "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
       "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
       "All gradients check\n"
      ]
     }
@@ -778,7 +905,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
