--- a/notebooks/biophysical_model.ipynb
+++ b/notebooks/biophysical_model.ipynb
@@ -141,8 +141,7 @@
     "\n",
     "df = pd.concat(\n",
     "    [\n",
-    "        pd.DataFrame({\"activity\": numpy.linspace(-10, 10, 100)})\n",
-    "        .assign(\n",
+    "        pd.DataFrame({\"activity\": numpy.linspace(-10, 10, 100)}).assign(\n",
     "            c=c,\n",
     "            t=t,\n",
     "            label=f\"concentration = {c:.1f}, non-neutralized fraction (t) = {t:.1f}\",\n",
@@ -167,7 +166,9 @@
     "(\n",
     "    alt.Chart(df)\n",
     "    .transform_calculate(\n",
-    "        unbound=(1 - alt.datum[\"t\"]) / (1 + (alt.datum[\"c\"] * alt.expr.exp(alt.datum[\"activity\"]))**n[\"n\"]) + alt.datum[\"t\"]\n",
+    "        unbound=(1 - alt.datum[\"t\"])\n",
+    "        / (1 + (alt.datum[\"c\"] * alt.expr.exp(alt.datum[\"activity\"])) ** n[\"n\"])\n",
+    "        + alt.datum[\"t\"]\n",
     "    )\n",
     "    .encode(\n",
     "        x=alt.X(\"activity\", title=\"antibody activity (-phi)\"),\n",
