--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -572,9 +572,8 @@
     "        # figure out what beta value is being changed\n",
     "        a_eps, n_eps, t_eps, beta_eps = model._a_n_t_beta_from_params(eps_vec)\n",
     "        if (\n",
-    "            ((a_eps == eps).sum() + (n_eps == eps).sum() + (t_eps == eps).sum() == 1)\n",
-    "            and (beta_eps == eps).sum() == 0\n",
-    "        ):\n",
+    "            (a_eps == eps).sum() + (n_eps == eps).sum() + (t_eps == eps).sum() == 1\n",
+    "        ) and (beta_eps == eps).sum() == 0:\n",
     "            # changing non-beta param should have no effect on s\n",
     "            assert (s == s_eps).all()\n",
     "            continue\n",
