write out regularization on `n_e` and `t_e`

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "### Regularization of epitope uniqueness$^2$\n",
     "This is a second regularization to ensure epitopes contain largely unique sites, but this one operates on the **squared** product of escape at a site, and so will more strongly penalize very large escape at same site, but less penalize weak shared constraint:\n",
-    "$$ R_{\\rm{uniquness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "$$ R_{\\rm{uniqueness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
     "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
    ]
   },
@@ -132,6 +132,40 @@
     "R_{\\rm{activity}} = \\lambda_{\\rm{activity}} h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM} \\right)\n",
     "$$\n",
     "where $\\lambda_{\\rm{activity}}$ is the strength of the regularization and $\\delta_{\\rm{activity}}$ is the Psdeuo-Huber delta parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "250a0349-831d-470f-af41-6230d321062d",
+   "metadata": {},
+   "source": [
+    "### Regularization of Hill coefficients\n",
+    "We regularize the Hill coefficients $n_e$ to be close to one using the regularization, using a penalty that essentially operates on the log of $n_e$ so the values are bounded by 0 and infinity:\n",
+    "$$\n",
+    "R_{\\rm{Hill coefficient}} = \\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)^2\n",
+    "$$\n",
+    "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
+    "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe23107a-a7d0-40a9-8162-617cdacdb277",
+   "metadata": {},
+   "source": [
+    "### Regularization of non-neutralizable fraction\n",
+    "We regularize the non-neutralizable fraction $t_e$ to be close to zero, and also during the minimization set a bound so it cannot go below zero.\n",
+    "The regularization is:\n",
+    "$$\n",
+    "R_{\\rm{non-neutralized-frac}}\n",
+    "=\n",
+    "\\lambda_{\\rm{non-neutralized-frac}} t_e^2\n",
+    "$$\n",
+    "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
+    "Note that the regularization should be fairly strong.\n",
+    "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
+    "Note also that the minimization bounds $t_e \\ge 0$."
    ]
   },
   {
@@ -366,6 +400,31 @@
     "\n",
     "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} =\n",
     "\\frac{\\lambda_{\\rm{escape}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right)}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right) + \\delta_{\\rm{activity}}} \n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f855dae-268e-462d-9b15-0b5e87147b3d",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}$\n",
+    "$\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
+    "=\n",
+    "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61aead7b-e6eb-4cb1-af77-49aee18f2c4a",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{non-neutralized-frac}}}{\\partial t_e}$\n",
+    "$$\n",
+    "\\frac{\\partial R_{\\rm{non-neutralized-frac}}}{\\partial t_e}\n",
+    "=\n",
+    "2 \\lambda_{\\rm{non-neutralized-frac}} t_e\n",
     "$$"
    ]
   },
