add Hill coefficient and non-neutralized frac regularization

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "### Regularization of non-neutralizable fraction\n",
-    "We regularize the non-neutralizable fraction $t_e$ to be close to zero, and also during the minimization set a bound so it cannot go below zero.\n",
+    "We regularize the non-neutralizable fraction $t_e$ to be close to zero, and also during the minimization set a bound so it cannot go below zero or above one.\n",
     "The regularization is:\n",
     "$$\n",
     "R_{\\rm{non-neutralized-frac}}\n",
@@ -165,7 +165,7 @@
     "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
     "Note that the regularization should be fairly strong.\n",
     "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
-    "Note also that the minimization bounds $t_e \\ge 0$."
+    "Note also that the minimization bounds $1 \\ge t_e \\ge 0$."
    ]
   },
   {
