--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:52.339379Z",
-     "iopub.status.busy": "2023-02-16T22:18:52.338910Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.495616Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.494911Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:52.339353Z"
+     "iopub.execute_input": "2023-02-18T13:48:36.662671Z",
+     "iopub.status.busy": "2023-02-18T13:48:36.662304Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.002072Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.001082Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:36.662634Z"
     },
     "tags": []
    },
@@ -167,11 +167,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.499168Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.498923Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.544684Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.543989Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.499148Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.006083Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.005842Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.055629Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.054984Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.006064Z"
     },
     "tags": []
    },
@@ -258,11 +258,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.547537Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.547356Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.767762Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.767092Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.547518Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.058556Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.058369Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.279752Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.279034Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.058542Z"
     },
     "tags": []
    },
@@ -340,11 +340,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.773198Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.772908Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.785323Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.784816Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.773174Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.284099Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.283846Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.294329Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.293770Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.284080Z"
     },
     "tags": []
    },
@@ -424,11 +424,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.788154Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.787886Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.812598Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.811973Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.788137Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.296963Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.296741Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.320785Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.320133Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.296944Z"
     },
     "tags": []
    },
@@ -511,11 +511,11 @@
    "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.815346Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.815130Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.835615Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.834977Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.815329Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.323757Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.323514Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.345258Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.344633Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.323738Z"
     },
     "tags": []
    },
@@ -620,11 +620,11 @@
    "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.838299Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.838156Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.860682Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.860151Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.838284Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.347765Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.347625Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.368970Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.368307Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.347750Z"
     },
     "tags": []
    },
@@ -715,11 +715,11 @@
    "id": "2a16f2d5-9529-4796-abac-4412eae7136c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.863175Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.862959Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.879985Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.879342Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.863155Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.371872Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.371654Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.387917Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.387311Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.371854Z"
     },
     "tags": []
    },
@@ -806,11 +806,11 @@
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-16T22:18:55.882449Z",
-     "iopub.status.busy": "2023-02-16T22:18:55.882244Z",
-     "iopub.status.idle": "2023-02-16T22:18:55.897996Z",
-     "shell.execute_reply": "2023-02-16T22:18:55.897370Z",
-     "shell.execute_reply.started": "2023-02-16T22:18:55.882430Z"
+     "iopub.execute_input": "2023-02-18T13:48:40.390766Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.390593Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.407673Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.407155Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.390748Z"
     },
     "tags": []
    },
@@ -880,9 +880,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6fc5f8d-ef11-4f7c-b8b0-fd38fe7444d3",
+   "metadata": {},
+   "source": [
+    "## Gradient of Hill coefficient regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1525f94f-eded-45e7-af21-37770d888084",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-18T13:48:40.410078Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.409875Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.419306Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.418727Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.410062Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_hill_coefficient(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_hill_coefficient(\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-5) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a228648d-461d-4546-9802-367bff308ce3",
+   "metadata": {},
+   "source": [
+    "## Gradient of non-neutralized fraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83633c7b-edb0-4bea-b657-a99dc075f044",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-18T13:48:40.421885Z",
+     "iopub.status.busy": "2023-02-18T13:48:40.421669Z",
+     "iopub.status.idle": "2023-02-18T13:48:40.432380Z",
+     "shell.execute_reply": "2023-02-18T13:48:40.431792Z",
+     "shell.execute_reply.started": "2023-02-18T13:48:40.421868Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-one Hill coefficient, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: non-zero non-neutralized frac, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_non_neutralized_frac(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_non_neutralized_frac(\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-5) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7237118f-7515-4504-b605-94c130031edb",
+   "id": "8acc34f6-7974-4a21-afb0-14796607cc3f",
    "metadata": {},
    "outputs": [],
    "source": []
