fix Hill coefficient >0 in fitting bounds

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -146,7 +146,8 @@
     "$$\n",
     "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
     "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
-    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$."
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
+    "Note also that the minimization bounds $n_e > 0$."
    ]
   },
   {
