fixes to make docs build correctly

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -410,10 +410,11 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}$\n",
-    "$\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
+    "$$\n",
+    "\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
     "=\n",
     "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
-    "$"
+    "$$"
    ]
   },
   {
